# driver-fatigue-detector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  example.env  web-demo.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRIVACY.md  README.md  UBIQUITY-CHECKLIST.md
docs/article-solid/: README.md  artigo.tex  sbc-template.sty
docs/research/: drowsiness-detection-study.md
src/driver_fatigue/: __main__.py  bootstrap.py
tests/: conftest.py
tests/e2e/: test_bootstrap_pipeline.py  test_context_validator_pipeline.py  test_dashboard_fusion.py
tests/integration/: test_cli.py  test_composite_presenter.py  test_composite_sink.py  test_demo_scenario.py  test_eye_state_validator.py  test_file_recorder.py  test_file_video_source.py  test_frame_renderer.py  test_headless_presenter.py  test_http_webhook_sink.py  test_inputs_endpoint.py  test_jsonl_sink.py  test_log_sink.py  test_mediapipe_detector.py  test_mqtt_sink.py  test_opencv_presenter.py  test_perclos_buffer.py  test_rendering_curves.py  test_rendering_helpers.py  test_rtsp_video_source.py  test_sound_sink.py  test_sound_sink_ramp.py  test_state_payload_has_index.py  test_ubiquity_tour.py  test_web_server_auth.py  test_webcam_source.py
tests/unit/: test_bootstrap_index_evaluator.py  test_circadian.py  test_fatigue_index_types.py  test_fuzzy_index.py  test_fuzzy_index_evaluator.py  test_noop_evaluator.py  test_noop_index_evaluator.py  test_settings.py  (+1 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  (+1 more)
(+114 files in other folders)
